<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="settings_sc_screen">Настройки</string>
    <string name="theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>

    <string name="android_developer_link">https://practicum.yandex.ru/android-developer</string>
    <string name="student_mail">silenci0.k89@gmail.com</string>
    <string name="topic_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer</string>
    <string name="no_apps_available">Нет доступных приложений для открытия ссылки</string>

    <string name="msg_nothing_found">Ничего не нашлось</string>
    <string name="msg_no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="txt_btn_update">Обновить</string>
    <string name="txt_history_search">Вы искали</string>
    <string name="msg_clean_history">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="no_list_created">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>

    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="created_message">Плейлист %s создан</string>
    <string name="playlist_creation_title">Завершить создание плейлиста?</string>
    <string name="playlist_creation_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>

    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="already_in_playlist">Трек уже добавлен в плейлист %s</string>

    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_track_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="empty_playlist_share_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист %s?</string>
    <string name="no">Нет</string>
    <string name="yes">"Да"</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_empty">Плейлист пуст</string>

</resources>