<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_size_main24sp" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyleMainScr"
        android:id="@+id/search_btn"
        android:layout_marginTop="24dp"
        android:text="@string/search"
        app:icon="@drawable/ic_search" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyleMainScr"
        android:id="@+id/media_btn"
        android:layout_marginVertical="16dp"
        android:text="@string/media"
        app:icon="@drawable/ic_media" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyleMainScr"
        android:id="@+id/settings_btn"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings" />
</LinearLayout>
