<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/nonMainScrBrd"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.settings.ui.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
        app:titleTextAppearance="@style/TitleText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextSettingsScr"
            android:text="@string/theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingVertical="12dp"
            android:paddingEnd="12dp"
            style="@style/SwitchColor"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextSettingsScr"
            android:text="@string/share_app" />

        <ImageView
            style="@style/IconSettingsScr"
            android:src="@drawable/ic_share" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextSettingsScr"
            android:text="@string/write_support" />

        <ImageView
            style="@style/IconSettingsScr"
            android:src="@drawable/ic_support" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextSettingsScr"
            android:text="@string/agreement" />

        <ImageView
            style="@style/IconSettingsScr"
            android:src="@drawable/ic_agreement" />

    </LinearLayout>

</LinearLayout>
