<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backward_settings_btn"
            style="@style/BackBtn"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            style="@style/TitleText"
            android:text="@string/settings_sc_screen"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextSettingsScr"
            android:text="@string/theme" />

        <Switch
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingVertical="12dp"
            android:paddingEnd="12dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextSettingsScr"
            android:text="@string/share" />

        <ImageView
            style="@style/IconSettingsScr"
            android:src="@drawable/ic_share" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextSettingsScr"
            android:text="@string/write_support" />

        <ImageView
            style="@style/IconSettingsScr"
            android:src="@drawable/ic_support" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextSettingsScr"
            android:text="@string/agreement" />

        <ImageView
            style="@style/IconSettingsScr"
            android:src="@drawable/ic_agreement" />

    </LinearLayout>

</LinearLayout>
