<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/nonMainScrBrd"
    tools:context=".MediaActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/medium_padding8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_backward"
        app:title=" " />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_tags="duration_mediaTag,albom_mediaTag,
        year_mediaTag,genre_mediaTag,country_mediaTag" />

    <!--*** Текстовая информация о треке ***-->
    <TextView
        android:id="@+id/country_media"
        style="@style/AdditionInfoMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_padding16"
        android:layout_marginBottom="@dimen/img_vert_padding20"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTag="country_mediaTag"
        app:layout_constraintTop_toBottomOf="@id/genre_media" />

    <TextView
        android:id="@+id/country_value_media"
        style="@style/AdditionInfoMediaValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_padding16"
        android:layout_marginBottom="@dimen/img_vert_padding20"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/country_media"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre_value_media"
        tools:text="Название страны" />

    <TextView
        android:id="@+id/genre_media"
        style="@style/AdditionInfoMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_padding16"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintBottom_toTopOf="@id/country_media"
        app:layout_constraintTag="genre_mediaTag"
        app:layout_constraintTop_toBottomOf="@id/year_media" />

    <TextView
        android:id="@+id/genre_value_media"
        style="@style/AdditionInfoMediaValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_padding16"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/genre_media"
        app:layout_constraintBottom_toTopOf="@id/country_value_media"
        app:layout_constraintTop_toBottomOf="@id/year_value_media"
        tools:text="Название жанра" />

    <TextView
        android:id="@+id/year_media"
        style="@style/AdditionInfoMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_padding16"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintBottom_toTopOf="@id/genre_media"
        app:layout_constraintTag="year_mediaTag"
        app:layout_constraintTop_toBottomOf="@id/albom_media" />

    <TextView
        android:id="@+id/year_value_media"
        style="@style/AdditionInfoMediaValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_padding16"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/year_media"
        app:layout_constraintBottom_toTopOf="@id/genre_value_media"
        app:layout_constraintTop_toBottomOf="@id/albom_value_media"
        tools:text="ХХХХ" />

    <TextView
        android:id="@+id/albom_media"
        style="@style/AdditionInfoMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_padding16"
        android:text="@string/album"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintBottom_toTopOf="@id/year_media"
        app:layout_constraintTag="albom_mediaTag"
        app:layout_constraintTop_toBottomOf="@id/duration_media" />

    <TextView
        android:id="@+id/albom_value_media"
        style="@style/AdditionInfoMediaValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_padding16"
        android:layout_marginStart="@dimen/additional_gap4"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/albom_media"
        app:layout_constraintBottom_toTopOf="@id/year_value_media"
        app:layout_constraintTop_toBottomOf="@id/duration_value_media"
        tools:text="Название альбома" />

    <TextView
        android:id="@+id/duration_media"
        style="@style/AdditionInfoMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding8"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintBottom_toTopOf="@id/albom_media"
        app:layout_constraintTag="duration_mediaTag"
        app:layout_constraintTop_toBottomOf="@id/time_media" />

    <TextView
        android:id="@+id/duration_value_media"
        style="@style/AdditionInfoMediaValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_top_media36"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/duration_media"
        app:layout_constraintTop_toBottomOf="@id/time_media"
        app:layout_constraintBottom_toTopOf="@id/albom_value_media"
        tools:text="00:00" />

    <TextView
        android:id="@+id/time_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/additional_gap4"
        android:layout_marginBottom="@dimen/gap_media30"
        app:layout_constraintEnd_toEndOf="@id/rightBorder24"
        app:layout_constraintStart_toStartOf="@id/leftBorder24"
        app:layout_constraintTop_toBottomOf="@id/play_track_media"
        app:layout_constraintBottom_toTopOf="@id/duration_media"
        tools:text="Время" />

    <ImageView
        android:id="@+id/add_track_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_track"

        app:layout_constraintBottom_toBottomOf="@+id/time_media"
        app:layout_constraintEnd_toStartOf="@id/play_track_media"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/leftBorder24"
        app:layout_constraintTop_toBottomOf="@id/artist_name_media" />

    <ImageView
        android:id="@+id/play_track_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_media30"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toTopOf="@id/time_media"
        app:layout_constraintEnd_toStartOf="@id/add_favorites_media"
        app:layout_constraintStart_toEndOf="@id/add_track_media"
        app:layout_constraintTop_toBottomOf="@id/artist_name_media"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/pause_track_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_media30"
        android:src="@drawable/ic_pause"
        app:layout_constraintBottom_toTopOf="@id/time_media"
        app:layout_constraintEnd_toStartOf="@id/add_favorites_media"
        app:layout_constraintStart_toEndOf="@id/add_track_media"
        app:layout_constraintTop_toBottomOf="@id/artist_name_media"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/add_favorites_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_favorites"
        app:layout_constraintBottom_toBottomOf="@id/time_media"
        app:layout_constraintEnd_toEndOf="@id/rightBorder24"
        app:layout_constraintStart_toEndOf="@id/play_track_media"
        app:layout_constraintTop_toBottomOf="@id/artist_name_media" />

    <TextView
        android:id="@+id/artist_name_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/img_end_padding12"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/rightBorder24"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/leftBorder24"
        app:layout_constraintTop_toBottomOf="@id/track_name_media"
        app:layout_constraintBottom_toTopOf="@id/play_track_media"
        tools:text="Название группы" />

    <TextView
        android:id="@+id/track_name_media"
        style="@style/MediaNameTrackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_backward24"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/artist_name_media"
        app:layout_constraintEnd_toEndOf="@id/rightBorder24"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/leftBorder24"
        app:layout_constraintTop_toBottomOf="@id/album_cover_media"
        tools:text="Название песни" />

    <ImageView
        android:id="@+id/album_cover_media"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/btn_backward24"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/track_name_media"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/rightBorder24"
        app:layout_constraintStart_toStartOf="@id/leftBorder24"
        app:layout_constraintTop_toBottomOf="@id/toolbar_media"
        tools:src="@drawable/ic_placeholder" />

</androidx.constraintlayout.widget.ConstraintLayout>
